@@ -3,7 +3,7 @@
  *
  *   Log file routines for the Common UNIX Printing System (CUPS).
  *
- *   Copyright 2007-2009 by Apple Inc.
+ *   Copyright 2007-2010 by Apple Inc.
  *   Copyright 1997-2007 by Easy Software Products, all rights reserved.
  *
  *   These coded instructions, statements, and computer programs are the
@@ -560,7 +560,7 @@ cupsdLogRequest(cupsd_client_t *con,	/* I - Request to log */
   if (AccessLogLevel < CUPSD_ACCESSLOG_ALL)
   {
    /*
-    * Eliminate simple GET requests...
+    * Eliminate simple GET, POST, and PUT requests...
     */
 
     if ((con->operation == HTTP_GET &&
@@ -568,7 +568,8 @@ cupsdLogRequest(cupsd_client_t *con,	/* I - Request to log */
 	 strncmp(con->uri, "/admin/log", 10)) ||
 	(con->operation == HTTP_POST && !con->request &&
 	 strncmp(con->uri, "/admin", 6)) ||
-	(con->operation != HTTP_POST && con->operation != HTTP_PUT))
+	(con->operation != HTTP_GET && con->operation != HTTP_POST &&
+	 con->operation != HTTP_PUT))
       return (1);
 
     if (con->request && con->response &&
